# sas

./: .dev.vars.example  .gitignore  BUILD_COMPLETE.md  CURRENT_STATUS.md  DAY1_OPERATIONS_GUIDE.md  DELAYED_TO_LIVE_RUNBOOK.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  FINAL_SMOKE_TEST.md  FIRST_SESSION_QUICKREF.md  GO_LIVE.md  GO_LIVE_RUNBOOK.md  IBKR_MAC_MINI_PATCH.md  IBKR_QUICKSTART.md  IBKR_SETUP.md  IVRV_DEPLOYMENT_GUIDE.md  IVRV_FINAL_STATUS.md  IVRV_IMPLEMENTATION_PLAN.md  IVRV_IMPLEMENTATION_STATUS.md  MAC_MINI_DEPLOY.sh  MAC_MINI_DEPLOYMENT.md  MARKET_OPEN_CHECKLIST.md  MOCK_EXECUTION_VALIDATED.md  MOCK_MODE_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_PROPOSAL_ENGINE.md  PHASE_B1_CHECKPOINT.md  PHASE_B2_COMPLETE.md  PHASE_B3_COMPLETE.md  PLAYBOOK.md  PRE_LAUNCH_CLEANUP.md  PRE_MARKET_LOCKDOWN.md  PRE_MARKET_VALIDATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SIMPLE_MAC_MINI_COMMANDS.txt  STRATEGY_EXPANSION_STATUS.md  (+11 more)
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: README.md  backfill_iv_history.ts  check-broker.sh  check-data.sh  install_launchagents.sh  monitor-strategies.sh  view-proposals.sh
services/ibkr-broker/: CHANGELOG.md  DELAYED_DATA.md  MAC_MINI_SETUP.md  QUICK_REFERENCE.md  README.md  cloudflared-config.template.yml  com.ibkr.broker.plist  deploy_tunnel.sh  pyproject.toml  run.sh  run_mac.sh  setup.sh  setup_mac_mini.sh  test.sh  test_connection.py  test_mac_mini.sh
services/ibkr-broker/app/: __init__.py  main.py  smoke.py
(+83 files in other folders)
