[project]
name = "ibkr-broker"
version = "0.1.0"
description = "Interactive Brokers broker microservice for SAS"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "ib-insync==0.9.86"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

